deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: Spring-Web
spec:
  selector:
    matchLabels:
      app: java
      env: dev
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: spring-web
        image: kherguner/spring-web:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
