services.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-service
spec:
  selector:
    app: myapp
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 38080
