ingress.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-ingress
  labels:
    stage: prod
spec:
  replicas: 3
  selector:
    matchLabels:
      app: spring-web
  template:
    metadata:
      labels:
        app: spring-web
    spec:
      containers:
      - name: spring
        image: kherguner/spring-web:latest
        resources:
          limits:
            memory: "256Mi"
            cpu: "250m"
          requests:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: spring-ing-svc
spec:
  type: ClusterIP
  selector:
    app: spring-web
  ports:
  - port: 8081
    targetPort: 8081
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-ing-ing
  annotations:
    ingress.kubernetes.io/rewrite-target: /
  labels:
    name: spring-web
spec:
  rules:
  - host: www.anadolu.demo
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: spring-ing-svc
            port: 
              number: 8081
